# RV-Node-Bridge

./: CMakeLists.txt  LICENSE  README.md  compile.py  package.xml  setup.py  test.ipynb
config/: host.yml  judge.yml  user.yml
launch/: node_bridge.launch
msg/: DebugData_Type.msg  GraphicData_Type.msg  aerialRobotenergy.msg  autoaimData.msg  boardAlpha.msg  boardBeta.msg  buffInfo.msg  bulletRemaining.msg  chassisData.msg  clientCustomCharacter.msg  clientCustomGraphicDelete.msg  clientCustomGraphicDouble.msg  clientCustomGraphicFive.msg  clientCustomGraphicSeven.msg  client_custom_graphicSingle.msg  controlInfo.msg  dartClientCmds.msg  dartRemainingtime.msg  dartStatus.msg  dbugData.msg  debugInfo.msg  errorInfo.msg  eventData.msg  gameResult.msg  gameRobotpos.msg  gameRobotstatus.msg  gameStatus.msg  gyroscopeData.msg  healthPoint.msg  heartbeat.msg  icraBuffDebuffZoneStatus.msg  jointCalibration.msg  jointControl.msg  jointInfo.msg  jointState.msg  powerHeatData.msg  refereeWarning.msg  rfidStatus.msg  robotCommunication.msg  robotHurt.msg  (+2 more)
node_bridge/: bridge.py  compile.py  protocol.py
ref/: protocol.h  protocol_judge.json  protocol_judge.yml
scripts/: .gitignore  compile.py  install.sh
src/: board.yml  bridge.py  compile.py  host.yml  judge.yml  protocol.py  user.yml
srv/: DebugData_Type.srv  GraphicData_Type.srv  autoaimData.srv  boardAlpha.srv  boardBeta.srv  buffInfo.srv  bulletRemaining.srv  chassisData.srv  clientCustomGraphicDelete.srv  clientCustomGraphicDouble.srv  clientCustomGraphicSeven.srv  dartStatus.srv  debugInfo.srv  gameRobotpos.srv  (+26 more)
(+11 files in other folders)
