<?xml version="1.0"?>
<package format="2">

  <name>node_bridge_ros</name>
  <version>0.0.0</version>
  <description>The node_bridge_ros package</description>
  <maintainer email="coin12.wu@gmail.com">tccoin</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/RoboVigor/RV-node_bridge_ros</url>
  <author email="coin12.wu@gmail.com">tccoin</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
